[gd_scene load_steps=14 format=2]

[ext_resource path="res://gfx/objects/simple_light/light.png" type="Texture" id=1]
[ext_resource path="res://gfx/lights/512px.png" type="Texture" id=2]
[ext_resource path="res://scenes/LevelObjects/SimpleLight/SimpleLight.gd" type="Script" id=3]
[ext_resource path="res://gfx/objects/simple_light/debris2.png" type="Texture" id=4]
[ext_resource path="res://gfx/objects/simple_light/debris3.png" type="Texture" id=5]
[ext_resource path="res://gfx/objects/simple_light/debris4.png" type="Texture" id=6]
[ext_resource path="res://gfx/objects/simple_light/remains.png" type="Texture" id=7]
[ext_resource path="res://sfx/level_objects/simplelight/glass_metal_smash.wav" type="AudioStream" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 9.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2, 15 )

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 0.29
emission_shape = 1
emission_sphere_radius = 5.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 180.0
flatness = 1.0
gravity = Vector3( 0, 50, 0 )
initial_velocity = 80.0
initial_velocity_random = 0.5
angular_velocity = 100.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 4 )

[node name="SimpleLight" type="StaticBody2D" groups=[
"breakable",
]]
script = ExtResource( 3 )
max_variation = 0.0

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0.5, -24 )
flip_h = true

[node name="Remains" type="Sprite" parent="."]
visible = false
texture = ExtResource( 7 )
offset = Vector2( 0, -3 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -39 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -15 )
shape = SubResource( 2 )

[node name="Explosion" type="Node2D" parent="."]
position = Vector2( 0.5, -27 )

[node name="Debris2" type="Particles2D" parent="Explosion"]
emitting = false
lifetime = 2.0
one_shot = true
explosiveness = 1.0
process_material = SubResource( 5 )
texture = ExtResource( 4 )

[node name="Debris3" type="Particles2D" parent="Explosion"]
emitting = false
lifetime = 2.0
one_shot = true
explosiveness = 1.0
process_material = SubResource( 5 )
texture = ExtResource( 5 )

[node name="Debris4" type="Particles2D" parent="Explosion"]
emitting = false
lifetime = 2.0
one_shot = true
explosiveness = 1.0
process_material = SubResource( 5 )
texture = ExtResource( 6 )

[node name="Timer" type="Timer" parent="Explosion"]
wait_time = 2.0
one_shot = true

[node name="DestroySFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
attenuation = 0.517632
[connection signal="timeout" from="Explosion/Timer" to="." method="_on_Timer_timeout"]
